@@ -106,6 +106,11 @@ Bugzilla   : 12836
 Description: lfs find on -1 stripe looping in lsm_lmm_verify_common()
 Details    : Avoid lov_verify_lmm_common() on directory with -1 stripe count.
 
+Severity   : major
+Bugzilla   : 12932
+Description: obd_health_check_timeout too short
+Details    : set obd_health_check_timeout as 1.5x of obd_timeout
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
